@@ -1,5 +1,9 @@
 2002-01-10  Sam Steingold  <sds@gnu.org>
 
+	* spvw.d (main): --version: print *FEATURES*
+
+2002-01-10  Sam Steingold  <sds@gnu.org>
+
 	* package.d (cerror_package_locked): error-format-string: print
 	func with ~A so that "DEFUN/DEFMACRO" is printed without quotes
 
